hphp/test/slow/reified-generics/new-static-2.php.expectf
Fatal error: Cannot call new static since class%?{ C} has reified generics in %s on line 5
